# openclaw-governance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: migrating-existing-governance.md
docs/releases/: v0.5.5.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.4.md
skills/openclaw-governance/: SKILL.md
src/openclaw_governance/: __init__.py  __main__.py  adopt.py  agent_scope.py  candidates.py  capability_enrich.py  capability_governance.py  capability_registry.py  check_capabilities.py  check_registry.py  cli.py  config.py  discover.py  discover_plugins.py  discover_skills.py  doctor.py  governance_scaffold.py  init_cmd.py  inject_agents.py  inventory_artifacts.py  materialize.py  openclaw_cli.py  paths.py  preview_sanitize.py  regen_readme_agent_raci.py  regen_readme_summary.py  registry_common.py  (+7 more)
tests/: conftest.py  test_adopt.py  test_agent_scope.py  test_allowlist_promote.py  test_capability_inventory.py  test_capability_registry.py  test_check_registry_cron_fingerprint.py  test_cli_discover_json.py  test_config.py  test_discover.py  test_discover_read_only.py  test_inject_agents.py  test_inventory_artifacts.py  test_openclaw_cli.py  test_paths.py  test_preview_sanitize.py  test_promote_preserves_curated.py  test_raci_automation.py  test_regen_roundtrip.py  test_registry_common.py  test_registry_merge.py  test_remote.py  test_resolve_config.py  test_runbook_discover.py  test_ship.py  test_staged_discovery_safety.py  test_validate_config.py  test_version.py  test_workspace_runbook_import.py
(+11 files in other folders)
